Fixed spoiler for users with force dark mode.

--- a/style.css
+++ b/style.css
@@ -60,11 +60,12 @@ textarea:focus, input:focus{
 
 
 .spoiler{
-color:black;
+color:transparent;
 background-color: black;
 }
 .spoiler:hover{
 background-color: transparent;
+color:black;
 }
 .hoverable {
   position: relative;
